--- a/SDK/SDK.csproj
+++ b/SDK/SDK.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <PackageId>LOC.Logic.Sdk</PackageId>
     <Version>0.0.1</Version>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\RuntimeServer\Protos\runtime.proto" GrpcServices="Client" ProtoRoot="..\RuntimeServer\Protos" />
-    <Protobuf Include="..\RuntimeServer\Protos\exception.proto" ProtoRoot="..\RuntimeServer\Protos" />
+    <Protobuf Include="..\Protos\runtime.proto" GrpcServices="Client" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\exception.proto" ProtoRoot="..\Protos" />
   </ItemGroup>
 
 </Project>
