chore: move Logic and Shared into example

--- a/example/Logic/Logic.csproj
+++ b/example/Logic/Logic.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SDK\SDK.csproj" />
+    <ProjectReference Include="..\..\SDK\SDK.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj">
       <Aliases>Shared</Aliases>
     </ProjectReference>
