--- a/example/Shared/Shared.csproj
+++ b/example/Shared/Shared.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SDK\SDK.csproj" />
+    <ProjectReference Include="..\..\SDK\SDK.csproj" />
   </ItemGroup>
 
 </Project>
