--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,6 +35,19 @@ jobs:
   
       - name: Archive Build Artifacts
         uses: actions/upload-artifact@v4
+        if: "!startsWith(github.ref, 'refs/tags/')"
         with:
           name: dotnet-runtime
           path: Runtime/bin/Release/net7.0/Runtime
+
+      - name: Set Tag Environment Variable
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Upload release file
+        uses: softprops/action-gh-release@v0.1.15
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          name: Release v${{ env.RELEASE_VERSION }}
+          draft: true
+          files: Runtime/bin/Release/net7.0/Runtime
