--- a/SDK/SDK.csproj
+++ b/SDK/SDK.csproj
@@ -18,8 +18,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\Protos\runtime.proto" GrpcServices="Client" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\common\Hash.proto" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\common\Identity.proto" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\common\Revision.proto" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\common\U128.proto" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\common\Uuid.proto" ProtoRoot="..\Protos" />
     <Protobuf Include="..\Protos\exception.proto" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\runtime.proto" GrpcServices="Client" ProtoRoot="..\Protos" />
+    <Protobuf Include="..\Protos\Task.proto" ProtoRoot="..\Protos" />
   </ItemGroup>
 
 </Project>
