--- a/example/RuntimeServer/RuntimeServer.csproj
+++ b/example/RuntimeServer/RuntimeServer.csproj
@@ -12,7 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\..\Protos\runtime.proto" GrpcServices="Server" />
+    <Protobuf Include="..\..\Protos\runtime.proto" GrpcServices="Server" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\Hash.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\Identity.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\Revision.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\U128.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\Uuid.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\Task.proto" ProtoRoot="..\..\Protos" />
   </ItemGroup>
 
 </Project>
