--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,9 @@ on:
       - v*
   pull_request:
 
+permissions:
+  contents: write
+
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
@@ -32,7 +35,7 @@ jobs:
       - name: Build Runtime
         run: |
           dotnet build --configuration Release
-  
+
       - name: Archive Build Artifacts
         uses: actions/upload-artifact@v4
         if: "!startsWith(github.ref, 'refs/tags/')"
@@ -48,6 +51,5 @@ jobs:
         uses: softprops/action-gh-release@v0.1.15
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: Release v${{ env.RELEASE_VERSION }}
-          draft: true
+          name: Release ${{ env.RELEASE_VERSION }}
           files: Runtime/bin/Release/net7.0/Runtime
