--- a/example/Logic/Logic.csproj
+++ b/example/Logic/Logic.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.25.1" />
-    <PackageReference Include="Grpc.Tools" Version="2.56.2">
+    <PackageReference Include="Grpc.Tools" Version="2.59.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SDK\SDK.csproj" />
+    <!-- <PackageReference Include="LOC.Logic.Sdk" Version="0.0.4" /> -->
     <ProjectReference Include="..\Shared\Shared.csproj">
       <Aliases>Shared</Aliases>
     </ProjectReference>
