--- a/example/Shared/Shared.csproj
+++ b/example/Shared/Shared.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SDK\SDK.csproj" />
+    <!-- <PackageReference Include="LOC.Logic.Sdk" Version="0.0.4" /> -->
   </ItemGroup>
 
 </Project>
