--- a/example/RuntimeServer/RuntimeServer.csproj
+++ b/example/RuntimeServer/RuntimeServer.csproj
@@ -12,15 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\..\Protos\common\Hash.proto" ProtoRoot="..\..\Protos" />
-    <Protobuf Include="..\..\Protos\common\Identity.proto" ProtoRoot="..\..\Protos" />
-    <Protobuf Include="..\..\Protos\common\Revision.proto" ProtoRoot="..\..\Protos" />
-    <Protobuf Include="..\..\Protos\common\U128.proto" ProtoRoot="..\..\Protos" />
-    <Protobuf Include="..\..\Protos\common\Uuid.proto" ProtoRoot="..\..\Protos" />
-    <Protobuf Include="..\..\Protos\logic\Logic.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\hash.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\identity.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\revision.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\u128.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\common\uuid.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\logic\logic.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\eventstore.proto" ProtoRoot="..\..\Protos" />
     <Protobuf Include="..\..\Protos\external.proto" ProtoRoot="..\..\Protos" />
     <Protobuf Include="..\..\Protos\runtime.proto" GrpcServices="Server" ProtoRoot="..\..\Protos" />
-    <Protobuf Include="..\..\Protos\Task.proto" ProtoRoot="..\..\Protos" />
+    <Protobuf Include="..\..\Protos\task.proto" ProtoRoot="..\..\Protos" />
   </ItemGroup>
 
 </Project>
