--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -32,6 +32,11 @@ jobs:
         with:
           dotnet-version: 7.0.x
 
+      - name: Test SDK
+        run: |
+          dotnet test SDK.Tests \
+            --configuration Release
+
       - name: Build Runtime
         run: |
           dotnet publish Runtime \
