--- a/SDK/SDK.csproj
+++ b/SDK/SDK.csproj
@@ -7,6 +7,8 @@
     <PackageId>LOC.Logic.Sdk</PackageId>
     <Version>0.0.6</Version>
     <Nullable>enable</Nullable>
+    <RepositoryUrl>https://github.com/fstnetwork/loc-logic-sdk-cs</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
