--- a/SDK.Tests/SDK.Tests.csproj
+++ b/SDK.Tests/SDK.Tests.csproj
@@ -23,6 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.Tools" Version="2.59.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SDK\SDK.csproj" />
   </ItemGroup>
 
