--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,6 +24,7 @@ jobs:
         uses: creyD/prettier_action@v4.3
         with:
           dry: true
+          prettier_version: 2.8.8
           prettier_options: --check **/*.{js,ts,md,json,yaml}
 
   commit:
