--- a/Runtime/Runtime.csproj
+++ b/Runtime/Runtime.csproj
@@ -20,6 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SDK\SDK.csproj" />
-    <!-- <PackageReference Include="LOC.Logic.Sdk" Version="0.0.15" /> -->
+    <!-- <PackageReference Include="FSTNetwork.LOC.Logic.Sdk" Version="0.0.15" /> -->
   </ItemGroup>
 </Project>
