--- a/SDK/SDK.csproj
+++ b/SDK/SDK.csproj
@@ -4,7 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <PackageId>LOC.Logic.Sdk</PackageId>
+    <PackageId>FSTNetwork.LOC.Logic.Sdk</PackageId>
     <Version>0.0.15</Version>
     <Nullable>enable</Nullable>
     <RepositoryUrl>https://github.com/fstnetwork/loc-logic-sdk-cs</RepositoryUrl>
