--- a/example/Logic/Logic.csproj
+++ b/example/Logic/Logic.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SDK\SDK.csproj" />
-    <!-- <PackageReference Include="LOC.Logic.Sdk" Version="0.0.15" /> -->
+    <!-- <PackageReference Include="FSTNetwork.LOC.Logic.Sdk" Version="0.0.15" /> -->
     <ProjectReference Include="..\Shared\Shared.csproj">
       <Aliases>Shared</Aliases>
     </ProjectReference>
