--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
   "name": "C# (.NET)",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   // https://mcr.microsoft.com/en-us/product/devcontainers/dotnet/about
-  "image": "mcr.microsoft.com/devcontainers/dotnet:0-7.0",
+  "image": "mcr.microsoft.com/devcontainers/dotnet:7.0",
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   "features": {
